--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
         After some experience, I aspire to start up my own business in software development.
     </p>
 
+    <h1>Education</h1>
+    <h3>The Cathedral school of St. Anne & St. James</h3>
+    <p><strong>Highschool Certificate</strong></p>
+    <ul>
+        <li>English Second Language studen mentor</li>
+    </ul>
+
+    <h3>James Cook University</h3>
+    <p><strong>Bachelor of Information Technology | 2020 - 2024</strong></p>
+    <ul>
+        <li>Course GPA and Academic transcript available upon request</li>
+        <li>Current member of the Australian Computer Society (ACS)</li>
+        <li>Obtained high grades in Programming, Database modelling and Mobile computing subjects</li>
+    </ul>
+
 </body>
 
 </html>
