Add work experience.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
         <li>Obtained high grades in Programming, Database modelling and Mobile computing subjects</li>
     </ul>
 
+    <h1>Work Experience</h1>
+
+    <h3>Annandale Minimart</h3>
+    <p><strong>Casual Store Clerk | June 2020 - June 2021</strong></p>
+    <ul>
+        <li>Provided excellent customer service and product recommendations.</li>
+        <li>Registrar operation, food preperation and hygiene.</li>
+    </ul>
+
+    <h1>Clean Cut Blokes</h1>
+    <p><strong>Volunteer Arborist | November 2021 - February 2022</strong></p>
+    <ul>
+        <li>Labour-intensive work requiring attention to detail and risk management.</li>
+        <li>Provided support for injured team members with workload.</li>
+        <li>Operated large machinery with care.</li>
+    </ul>
+
+    <h1>Beloved HomeCare</h1>
+    <p><strong>Support Worker | June 2022 - Present</strong></p>
+    <ul>
+        <li>Assisted with company app maintenance, trouble shooting, provided technical advice to employees and handled risk management</li>
+        <li>Enhanced administration operations.</li>
+        <li>Contributed to training new employees in support work.</li>
+        <li>Participated in mandatory support and first aid training.</li>
+    </ul>
+
 </body>
 
 </html>
