--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
         <li>Participated in mandatory support and first aid training.</li>
     </ul>
 
+    <h1>Skills</h1>
+    <h2>Key Skills</h2>
+    <ul>
+        <li>Well developed communication and interpersonal skills developed through support work employment and university team projects.</li>
+        <li>Excellent leadership skills gained through student mentorship and church youth activities.</li>
+    </ul>
+
+    <h2>IT Skills</h2>
+    <ul>
+        <li>Advanced problem solving & analytical skills.</li>
+        <li>Exceptional programming fundementals.</li>
+    </ul>
+    <h3>Programming Languages</h3>
+    <ul>
+        <li>Python</li>
+        <li>C++</li>
+        <li>JavaScript</li>
+        <li>CSS</li>
+        <li>Java</li>
+    </ul>
 </body>
 
 </html>
