--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
         <li>CSS</li>
         <li>Java</li>
     </ul>
+
+    <h3>Training and Development</h3>
+    <h2>Work Integrated Learning</h2>
+    <p>To be updated soon...</p>
+
+    <footer>
+        <p>© 2023 Azariah Pundari</p>
+    </footer>
+    
 </body>
 
 </html>
