Add site content.

--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,10 @@
     <title>Hobbies</title>
 </head>
 <body>
-    
+    <h1>Hobbies</h1>
+
+    <p>During my free time, I like to read and catchup on the latest technology innovations. I also actively participate in youth activities at church
+        and I am considered a youth leader myself.
+    </p>
 </body>
 </html>
