Add hobbies link.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
     <h2>Work Integrated Learning</h2>
     <p>To be updated soon...</p>
 
+    <hr>
+    <a href="hobbies.html"> My hobbies</a>
+
     <footer>
         <p>© 2023 Azariah Pundari</p>
     </footer>
