--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Hi, I am Azariah :)</h1>
-    <img src="./me.jpg" height="200px" alt="This should be a photo of me.">
+    <img src="./assets/me.jpg" height="200px" border-radius="50px" alt="This should be a photo of me.">
     <h1>Summary</h1>
     <p>
         I am a hardworking third year student striving to be a software developer. I strive to be honest,
