--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./script.js"></script>
     <title>My Web Portfolio</title>
 </head>
 
 <body>
     <h1>Hi, I am Azariah :)</h1>
+    <!-- Button test for alert box -->
+    <button onclick="displayAlert()">Press here for supa secret settings :)</button><br>
     <img src="./assets/me.jpg" height="200px" border-radius="50px" alt="This should be a photo of me.">
     <h1>Summary</h1>
     <p>
