Refactor function name.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Hi, I am Azariah :)</h1>
     <!-- Button test for alert box -->
-    <button onclick="displayAlert()">Press here for supa secret settings :)</button><br>
+    <button id="button" onclick="nightMode()">Press here for supa secret settings :)</button><br>
     <img src="./assets/me.jpg" height="200px" border-radius="50px" alt="This should be a photo of me.">
     <h1>Summary</h1>
     <p>
