Add stylesheet link

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Hobbies</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hobbies</h1>
 
-    <p>During my free time, I like to read and catchup on the latest technology innovations. I also actively participate in youth activities at church
-        and I am considered a youth leader myself.
+    <p>
+      During my free time, I like to read and catchup on the latest technology
+      innovations. I also actively participate in youth activities at church and
+      I am considered a youth leader myself.
     </p>
-</body>
+  </body>
 </html>
