wip: refactor document

--- a/index.html
+++ b/index.html
@@ -1,98 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./script.js"></script>
-    <title>My Web Portfolio</title>
-</head>
+    <title>Azariah Pundari - Tech</title>
 
-<body>
-    <h1>Hi, I am Azariah :)</h1>
-    <!-- Button test for alert box -->
-    <button id="button" onclick="nightMode()">Press here for supa secret settings :)</button><br>
-    <img src="./assets/me.jpg" height="200px" border-radius="50px" alt="This should be a photo of me.">
-    <h1>Summary</h1>
-    <p>
-        I am a hardworking third year student striving to be a software developer. I strive to be honest,
-        competent, upholding the ACS code of ethics and constantly learning as technology is constantly evolving.
-        After some experience, I aspire to start up my own business in software development.
-    </p>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    <h1>Education</h1>
-    <h3>The Cathedral school of St. Anne & St. James</h3>
-    <p><strong>Highschool Certificate</strong></p>
-    <ul>
-        <li>English Second Language studen mentor</li>
-    </ul>
+  <nav>
+    <!-- TODO: implement nav bar -->
+  </nav>
 
-    <h3>James Cook University</h3>
-    <p><strong>Bachelor of Information Technology | 2020 - 2024</strong></p>
-    <ul>
-        <li>Course GPA and Academic transcript available upon request</li>
-        <li>Current member of the Australian Computer Society (ACS)</li>
-        <li>Obtained high grades in Programming, Database modelling and Mobile computing subjects</li>
-    </ul>
-
-    <h1>Work Experience</h1>
-
-    <h3>Annandale Minimart</h3>
-    <p><strong>Casual Store Clerk | June 2020 - June 2021</strong></p>
-    <ul>
-        <li>Provided excellent customer service and product recommendations.</li>
-        <li>Registrar operation, food preperation and hygiene.</li>
-    </ul>
-
-    <h1>Clean Cut Blokes</h1>
-    <p><strong>Volunteer Arborist | November 2021 - February 2022</strong></p>
-    <ul>
-        <li>Labour-intensive work requiring attention to detail and risk management.</li>
-        <li>Provided support for injured team members with workload.</li>
-        <li>Operated large machinery with care.</li>
-    </ul>
-
-    <h1>Beloved HomeCare</h1>
-    <p><strong>Support Worker | June 2022 - Present</strong></p>
-    <ul>
-        <li>Assisted with company app maintenance, trouble shooting, provided technical advice to employees and handled risk management</li>
-        <li>Enhanced administration operations.</li>
-        <li>Contributed to training new employees in support work.</li>
-        <li>Participated in mandatory support and first aid training.</li>
-    </ul>
-
-    <h1>Skills</h1>
-    <h2>Key Skills</h2>
-    <ul>
-        <li>Well developed communication and interpersonal skills developed through support work employment and university team projects.</li>
-        <li>Excellent leadership skills gained through student mentorship and church youth activities.</li>
-    </ul>
-
-    <h2>IT Skills</h2>
-    <ul>
-        <li>Advanced problem solving & analytical skills.</li>
-        <li>Exceptional programming fundementals.</li>
-    </ul>
-    <h3>Programming Languages</h3>
-    <ul>
-        <li>Python</li>
-        <li>C++</li>
-        <li>JavaScript</li>
-        <li>CSS</li>
-        <li>Java</li>
-    </ul>
-
-    <h3>Training and Development</h3>
-    <h2>Work Integrated Learning</h2>
-    <p>To be updated soon...</p>
-
-    <hr>
-    <a href="hobbies.html"> My hobbies</a>
+  <body>
+    <h1>Hi there , I am Azariah :)</h1>
+    <img
+      id="headshot"
+      src="./assets/me.jpg"
+      height="200px"
+      alt="This should be a photo of me."
+    />
 
     <footer>
-        <p>© 2023 Azariah Pundari</p>
+      <p>© 2023 Azariah Pundari</p>
     </footer>
-    
-</body>
-
+  </body>
 </html>
