--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title>Azariah Pundari - Tech</title>
-
-    <link rel="stylesheet" href="style.css" />
   </head>
 
   <nav>
@@ -14,13 +24,15 @@
   </nav>
 
   <body>
-    <h1>Hi there , I am Azariah :)</h1>
-    <img
-      id="headshot"
-      src="./assets/me.jpg"
-      height="200px"
-      alt="This should be a photo of me."
-    />
+    <div>
+      <h1>Hi there , I am Azariah :)</h1>
+      <img
+        id="headshot"
+        src="./assets/me.jpg"
+        height="200px"
+        alt="This should be a photo of me."
+      />
+    </div>
 
     <footer>
       <p>© 2023 Azariah Pundari</p>
