wip: added nav list

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <title>Azariah Pundari - Tech</title>
   </head>
   <nav>
-    <!-- TODO: implement nav bar -->
+    <ul>
+      <li>resume</li>
+      <li>projects</li>
+    </ul>
   </nav>
 
   <body>
