--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       crossorigin="anonymous"
     ></script>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+    /> -->
+    <link rel="stylesheet" href="node_modules/bootstrap/css/custom.css" />
     <title>Azariah Pundari - Tech</title>
   </head>
   <nav>
@@ -28,6 +29,7 @@
   <body>
     <div>
       <h1>Hi there , I am Azariah :)</h1>
+      <h2>Local technology enthusiast</h2>
       <img
         id="headshot"
         src="./assets/me.jpg"
