--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
       crossorigin="anonymous"
     ></script>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    /> -->
+    />
     <link rel="stylesheet" href="node_modules/bootstrap/css/custom.css" />
     <title>Azariah Pundari - Tech</title>
   </head>
   <nav>
-    <ul>
-      <li>resume</li>
-      <li>projects</li>
+    <ul id="nav-list">
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="projects.html">Projects</a></li>
     </ul>
   </nav>
 
