--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/custom.css" />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Azariah Pundari - Tech</title>
   </head>
-  <nav>
+  <nav class="navbar">
     <ul id="nav-list">
       <li><a href="resume.html">Resume</a></li>
       <li><a href="projects.html">Projects</a></li>
@@ -28,7 +36,7 @@
 
   <body>
     <div>
-      <h1>Hi there , I am Azariah :)</h1>
+      <h1 class="roboto-bold">Hi, I am Azariah :)</h1>
       <h2>Local technology enthusiast</h2>
       <img
         id="headshot"
