--- a/index.html
+++ b/index.html
@@ -27,13 +27,31 @@
     />
     <title>Azariah Pundari - Tech</title>
   </head>
-  <nav class="navbar">
-    <ul id="nav-list">
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbg-main">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="" alt="" /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#">Resume</a>
+          <a class="nav-link" href="#">Contact Me</a>
+        </div>
+      </div>
+    </div>
   </nav>
-
   <body>
     <div>
       <h1 class="roboto-bold">Hi, I am Azariah :)</h1>
