--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbg-main">
     <div class="container-fluid">
+      <!-- Hamburger menue for smaller view ports -->
       <button
         class="navbar-toggler"
         type="button"
