--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="pages/projects.html">Projects</a>
           <a class="nav-link" href="#">Resume</a>
           <a class="nav-link" href="#">Contact Me</a>
         </div>
