--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="../css/custom.css" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,7 +45,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="pages/projects.html">Projects</a>
+          <a class="nav-link" href="projects.html">Projects</a>
           <a class="nav-link" href="#">Resume</a>
           <a class="nav-link" href="#">Contact Me</a>
         </div>
@@ -58,7 +58,7 @@
       <h2>Local technology enthusiast</h2>
       <img
         id="headshot"
-        src="./assets/me.jpg"
+        src="../assets/me.jpg"
         height="200px"
         alt="This should be a photo of me."
       />
