--- a/pages/index.html
+++ b/pages/index.html
@@ -52,12 +52,14 @@
       </div>
     </div>
   </nav>
+
   <body>
-    <div class="container">
-      <div class="">
-        <h1 class="roboto-bold">Hi, I am Azariah :)</h1>
+    <div class="container-fluid">
+      <div class="d-flex flex-column mb-5">
+        <div><h1 class="roboto-bold">Hi, I am Azariah :)</h1></div>
         <h2 class="text-wrap">Local technology enthusiast</h2>
         <img
+          class="object-fit-contain"
           id="headshot"
           src="../assets/me.jpg"
           height="200px"
@@ -65,6 +67,8 @@
         />
       </div>
     </div>
+
+    <!-- TODO: Add project carasoul here -->
 
     <!-- Contact form -->
     <form>
