--- a/pages/index.html
+++ b/pages/index.html
@@ -28,11 +28,11 @@
     <title>Azariah Pundari - Tech</title>
   </head>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbg-main">
-    <div class="container justify-content-center">
-      <!-- Hamburger menue for smaller view ports -->
+  <nav class="navbar navbar-expand-md sticky-top navbg-main navbar-dark">
+    <!-- Hamburger menu for smaller view ports -->
+    <div class="container">
       <button
-        class="navbar-toggler"
+        class="navbar-toggler custom-toggler"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#navbarNavAltMarkup"
@@ -42,7 +42,9 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse flex-grow-0" id="navbarNavAltMarkup">
+    </div>
+    <div class="container">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="projects.html">Projects</a>
