feat: centered navbar

--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md sticky-top navbg-main navbar-dark">
     <!-- Hamburger menu for smaller view ports -->
-    <div class="container">
+    <div class="d-flex ms-2">
       <button
         class="navbar-toggler custom-toggler"
         type="button"
@@ -43,8 +43,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-    <div class="container">
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="container-fluid">
+      <div
+        class="collapse navbar-collapse justify-content-center"
+        id="navbarNavAltMarkup"
+      >
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="projects.html">Projects</a>
