adjust container width & margins

--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,9 @@
   </nav>
 
   <body>
-    <div class="container d-flex justify-content-sm-center mt-5">
+    <div
+      class="container-fluid w-100 d-flex justify-content-md-start justify-content-sm-center mt-5 ms-md-5"
+    >
       <div class="mb-5">
         <h1 class="roboto-bold">Hi, I am Azariah :)</h1>
         <h2 class="text-wrap">Junior Software Developer</h2>
