--- a/pages/index.html
+++ b/pages/index.html
@@ -63,7 +63,7 @@
       class="container-fluid w-100 d-flex justify-content-md-start justify-content-sm-center mt-5 ms-md-5"
     >
       <div class="mb-5">
-        <h1 class="roboto-bold">Hi, I am Azariah :)</h1>
+        <h1 class="roboto-bold" id="main-intro">Hi, I am Azariah :)</h1>
         <h2 class="text-wrap">Junior Software Developer</h2>
         <img
           class="rounded-circle"
