changed h1 view style

--- a/pages/index.html
+++ b/pages/index.html
@@ -63,7 +63,10 @@
       class="container-fluid w-100 d-flex justify-content-md-start justify-content-sm-center mt-5 ms-md-5"
     >
       <div class="mb-5">
-        <h1 class="roboto-bold" id="main-intro">Hi, I am Azariah :)</h1>
+        <h1 class="roboto-bold" id="main-intro">
+          <span class="d-block text-start">Hi,</span>
+          <span class="d-block text-start">I am Azariah :)</span>
+        </h1>
         <h2 class="text-wrap">Junior Software Developer</h2>
         <img
           class="rounded-circle"
