removed form and made todo

--- a/pages/index.html
+++ b/pages/index.html
@@ -80,32 +80,6 @@
 
     <!-- TODO: Add project carasoul here -->
 
-    <!-- Contact form -->
-    <form>
-      <div class="container">
-        <h1 class="roboto-bold">Let's talk about cats</h1>
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Enter your name" required />
-        <label for="email">Email</label>
-        <input
-          type="email"
-          id="email"
-          placeholder="Enter your email"
-          required
-        />
-        <label for="message">Message</label>
-        <textarea
-          id="message"
-          rows="5"
-          placeholder="Enter your message"
-          required
-        ></textarea>
-        <button type="submit">Submit</button>
-      </div>
-    </form>
-
-    <footer>
-      <p>© 2023 Azariah Pundari</p>
-    </footer>
+    <!-- TODO: Add contact form -->
   </body>
 </html>
