--- a/pages/index.html
+++ b/pages/index.html
@@ -62,19 +62,20 @@
     <div
       class="container-fluid w-100 d-flex justify-content-md-start justify-content-sm-center mt-5 ms-md-5"
     >
-      <div class="mb-5">
+      <div class="d-flex flex-md-row flex-sm-column mb-5">
         <h1 class="roboto-bold" id="main-intro">
           <span class="d-block text-start">Hi,</span>
           <span class="d-block text-start">I am Azariah :)</span>
         </h1>
-        <h2 class="text-wrap">Junior Software Developer</h2>
-        <img
-          class="rounded-circle"
-          id="headshot"
-          src="../assets/me.jpg"
-          height="200px"
-          alt="This should be a photo of me."
-        />
+        <div class="object-fit-stretch">
+          <img
+            class="rounded-circle"
+            id="headshot"
+            src="../assets/me.jpg"
+            height="200vh"
+            alt="This should be a photo of me."
+          />
+        </div>
       </div>
     </div>
 
