--- a/pages/index.html
+++ b/pages/index.html
@@ -60,22 +60,22 @@
 
   <body>
     <div
-      class="container-fluid w-100 d-flex justify-content-md-start justify-content-sm-center mt-5 ms-md-5"
+      class="container-fluid w-100 d-flex justify-content-md-center justify-content-sm-center mt-5"
     >
-      <div class="d-flex flex-md-row flex-sm-column mb-5">
+      <div class="d-flex flex-md-row flex-sm-column mb-5 pb-md-5">
         <h1 class="roboto-bold" id="main-intro">
-          <span class="d-block text-start">Hi,</span>
-          <span class="d-block text-start">I am Azariah :)</span>
+          <span class="d-block text-start">Hi there,</span>
+          <span class="d-block text-start">I am Azariah</span>
         </h1>
-        <div class="object-fit-stretch">
-          <img
-            class="rounded-circle"
-            id="headshot"
-            src="../assets/me.jpg"
-            height="200vh"
-            alt="This should be a photo of me."
-          />
-        </div>
+      </div>
+      <div class="" id="headshot">
+        <img
+          class="rounded-circle"
+          id="headshot"
+          src="../assets/me.jpg"
+          height="300px"
+          alt="This should be a photo of me."
+        />
       </div>
     </div>
 
