--- a/pages/index.html
+++ b/pages/index.html
@@ -28,9 +28,9 @@
     <title>Azariah Pundari - Tech</title>
   </head>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md sticky-top navbg-main navbar-dark">
+  <nav class="navbar navbar-expand-md d-flex sticky-top navbg-main navbar-dark">
     <!-- Hamburger menu for smaller view ports -->
-    <div class="ms-2">
+    <div class="ms-sm-auto me-sm-2">
       <button
         class="navbar-toggler custom-toggler"
         type="button"
@@ -45,7 +45,7 @@
     </div>
     <div class="container">
       <div
-        class="collapse navbar-collapse justify-content-center"
+        class="collapse navbar-collapse justify-content-md-center text-sm-end me-sm-1"
         id="navbarNavAltMarkup"
       >
         <div class="navbar-nav">
@@ -59,23 +59,25 @@
   </nav>
 
   <body>
-    <div
-      class="container-fluid w-100 d-flex justify-content-md-center justify-content-sm-center mt-5"
-    >
-      <div class="d-flex flex-md-row flex-sm-column mb-5 pb-md-5">
-        <h1 class="roboto-bold" id="main-intro">
-          <span class="d-block text-start">Hi there,</span>
-          <span class="d-block text-start">I am Azariah</span>
-        </h1>
-      </div>
-      <div class="" id="headshot">
-        <img
-          class="rounded-circle"
-          id="headshot"
-          src="../assets/me.jpg"
-          height="300px"
-          alt="This should be a photo of me."
-        />
+    <div class="container" id="">
+      <div class="d-flex flex-md-row flex-sm-column mb-3">
+        <div class="p-2">
+          <div class="d-flex justify-content-sm-center">
+            <img
+              class="rounded-circle"
+              id="headshot"
+              src="../assets/me.jpg"
+              height="300px"
+              alt="This is me :)"
+            />
+          </div>
+        </div>
+        <div class="d-flex flex-md-row flex-sm-colum mb-5 pb-md-5">
+          <h1 class="roboto-bold" id="main-intro">
+            <span class="d-block">Hi there,</span>
+            <span class="d-block">I am Azariah</span>
+          </h1>
+        </div>
       </div>
     </div>
 
