wip: minor content adjustments

--- a/pages/index.html
+++ b/pages/index.html
@@ -59,8 +59,8 @@
   </nav>
 
   <body>
-    <div class="container" id="">
-      <div class="d-flex flex-md-row flex-sm-column mb-3">
+    <div class="container">
+      <div class="d-flex flex-md-row flex-sm-column mb-3 mt-sm-4">
         <div class="p-2">
           <div class="d-flex justify-content-sm-center">
             <img
@@ -72,7 +72,7 @@
             />
           </div>
         </div>
-        <div class="d-flex flex-md-row flex-sm-colum mb-5 pb-md-5">
+        <div class="d-flex flex-md-row flex-sm-colum mt-sm-4">
           <h1 class="roboto-bold" id="main-intro">
             <span class="d-block">Hi there,</span>
             <span class="d-block">I am Azariah</span>
