--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md d-flex sticky-top navbg-main navbar-dark">
     <!-- Hamburger menu for smaller view ports -->
-    <div class="ms-sm-auto me-sm-2">
+    <div class="ms-md-0 me-md-0 ms-sm-auto me-sm-2">
       <button
         class="navbar-toggler custom-toggler"
         type="button"
@@ -59,26 +59,44 @@
   </nav>
 
   <body>
-    <div class="container">
-      <div class="d-flex flex-md-row flex-sm-column mb-3 mt-sm-4">
-        <div class="p-2">
-          <div class="d-flex justify-content-sm-center">
-            <img
-              class="rounded-circle"
-              src="../assets/me.jpg"
-              height="300px"
-              alt="This is me :)"
-            />
+    <!-- Bottom shape divider -->
+    <section>
+      <div class="custom-shape-divider-bottom-1719809422">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
+      <!-- End bottom shape divider -->
+      <!-- Main content -->
+      <div class="container">
+        <div class="d-flex flex-md-row flex-sm-column mb-3 mt-lg-5 mt-sm-2">
+          <div class="p-2">
+            <div class="d-flex justify-content-sm-center">
+              <img
+                class="rounded-circle"
+                src="../assets/me.jpg"
+                height="300px"
+                alt="This is me :)"
+              />
+            </div>
+          </div>
+          <div class="d-flex flex-md-row flex-sm-colum mt-sm-auto p-5">
+            <h1 class="roboto-bold" id="main-text">
+              <span class="d-block text-center">Hi there,</span>
+              <span class="d-block text-center">I am Azariah</span>
+            </h1>
           </div>
         </div>
-        <div class="d-flex flex-md-row flex-sm-colum mt-sm-4">
-          <h1 class="roboto-bold" id="main-intro">
-            <span class="d-block">Hi there,</span>
-            <span class="d-block">I am Azariah</span>
-          </h1>
-        </div>
       </div>
-    </div>
+    </section>
 
     <!-- TODO: Add project carasoul here -->
 
